...
                                                    <color key="textColor" systemColor="labelColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                </textView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IGx-H7-rsy" userLabel="mapBtn">
                                                    <rect key="frame" x="0.0" y="11" width="160" height="157"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Map" label="MapButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="160" id="AO9-lj-DQs"/>
                                                        <constraint firstAttribute="height" constant="157" id="cSc-ko-MnE"/>
                                                    </constraints>
                                                    <connections>
                                                        <action selector="elementSelected:" destination="tJc-CW-iqZ" eventType="touchUpInside" id="8U5-6c-VLc"/>
...
