...
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hs2-2H-7rd">
                                                    <rect key="frame" x="20" y="10" width="374" height="40"/>
                                                    <color key="backgroundColor" red="0.1271043493" green="0.208633968" blue="0.72121182839999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Login button"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                    <state key="normal" title="Login">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <segue destination="lT5-HG-CXK" kind="show" identifier="loginSegue" id="o47-GE-DWm"/>
...
